# fz-webscraper

./: .env  README.md  blog.ipynb  dev_test.py  environment.yml  pyproject.toml
__note/: 01.ipynb  rightmove_example.html  spareroom_example.html
config/: notion_mapping.toml  scrapers.toml
src/webscraper/: __init__.py  cli.py  config.py  notion_client.py
src/webscraper/scrapers/: base.py  glassdoor.py  rightmove.py  spareroom.py
tests/integration/: test_glassdoor_scraper.py
tests/unit/: test_base_scraper.py
